correcting overflow on windowFg stop media items

--- a/app/styles/item.css
+++ b/app/styles/item.css
@@ -20,7 +20,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    overflow:scroll;
+    overflow:auto;
 }
 
 .pane.windowFg .item.isStop {
